Fixed server list and added overflow

--- a/components/MessageLayout.module.css
+++ b/components/MessageLayout.module.css
@@ -4,4 +4,5 @@
      gap: 0;
      overflow: scroll;
      height: 100vh;
+     width: 100%;
 }
